tests/kyverno-policies/add-gpu-nodeselector/gpu-nodeselector-mutated.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-gpu-nodeselector
  namespace: paas
spec:
  containers:
    - name: nginx
      image: nginx:latest
      resources:
        limits:
          nvidia.com/gpu: 1
  nodeSelector:
    nvidia.com/gpu.product: NVIDIA-A100-PCIE-40GB-MIG-1g.5gb
