tests/kyverno-policies/add-gpu-nodeselector/gpu-nodeselector-not-mutated-if-affinity.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-gpu-skip-affinity
  namespace: paas
spec:
  containers:
    - name: nginx
      image: nginx:latest
      resources:
        limits:
          nvidia.com/gpu: 1
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: nvidia.com/gpu.product
            operator: In
            values:
            - NVIDIA-A100-PCIE-40GB-MIG-7g.40gb
