tests/kyverno-policies/add-gpu-nodeselector/gpu-nodeselector-not-mutated.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-gpu-skip
  namespace: paas
spec:
  containers:
    - name: nginx
      image: nginx:latest
