tests/kyverno-policies/add-gpu-nodeselector/gpu-nodeselector-remove.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-gpu-remove
  namespace: paas
spec:
  containers:
    - name: nginx
      image: nginx:latest
      resources:
        limits:
          cpu: 1
  nodeSelector:
    node-role.kubernetes.io/paas: ''
