tests/kyverno-policies/add-gpu-nodeselector/resources.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-gpu-skip
  namespace: paas
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: test-gpu-skip-set
  namespace: paas
spec:
  containers:
    - name: nginx
      image: nginx:latest
      resources:
        limits:
          nvidia.com/gpu: 1
  nodeSelector:
    nvidia.com/gpu.product: NVIDIA-A100-PCIE-40GB-MIG-3g.20gb
---
apiVersion: v1
kind: Pod
metadata:
  name: test-gpu-nodeselector
  namespace: paas
spec:
  containers:
    - name: nginx
      image: nginx:latest
      resources:
        limits:
          nvidia.com/gpu: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: test-gpu-remove
  namespace: paas
spec:
  containers:
    - name: nginx
      image: nginx:latest
      resources:
        limits:
          cpu: 1
  nodeSelector:
    node-role.kubernetes.io/paas: ''
    nvidia.com/gpu.product: NVIDIA-A100-PCIE-40GB-MIG-3g.20gb
