tests/kyverno-policies/add-gpu-nodeselector/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-gpu-nodeselector
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: add-gpu-nodeselector
    rule: gpu-nodeselector
    resources:
      - test-gpu-skip
    patchedResources: gpu-nodeselector-not-mutated.yaml
    kind: Pod
    result: skip
  - policy: add-gpu-nodeselector
    rule: gpu-nodeselector
    resources:
      - test-gpu-skip-set
    patchedResources: gpu-nodeselector-not-mutated-if-set.yaml
    kind: Pod
    result: skip
  - policy: add-gpu-nodeselector
    rule: gpu-nodeselector
    resources:
      - test-gpu-skip-affinity
    patchedResources: gpu-nodeselector-not-mutated-if-affinity.yaml
    kind: Pod
    result: skip
  - policy: add-gpu-nodeselector
    rule: gpu-nodeselector
    resources:
      - test-gpu-nodeselector
    patchedResources: gpu-nodeselector-mutated.yaml
    kind: Pod
    result: pass
  - policy: add-gpu-nodeselector
    rule: remove-gpu-nodeselector
    resources:
      - test-gpu-remove
    patchedResources: gpu-nodeselector-remove.yaml
    kind: Pod
    result: pass
  - policy: add-gpu-nodeselector
    rule: remove-gpu-nodeselector
    resources:
      - test-gpu-skip-set
    patchedResources: gpu-nodeselector-not-mutated-if-set.yaml
    kind: Pod
    result: skip
